# python3-minidsp

./: README.md  pyproject.toml
minidsp/: hid_wrapper.py
