[tool.poetry]
name = "minidsp"
version = "0.1.1"
description = "Python bindings to a MiniDSP unit"
authors = ["Matt Feifarek <matt.feifarek@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6"
argparse = "*"
hidapi = "*"

[tool.poetry.scripts]
minidsp = 'minidsp.cli:main'

[tool.poetry.dev-dependencies]
ipython = "*"
flake8 = "^3.8.2"
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
